# broad-sword-of-justice

./: .gitignore  .gitmodules  AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  FPS.cpp  FPS.h  Game.cpp  Game.h  Input.cpp  Input.h  Makefile  OS.cpp  OS.h  Player.cpp  Player.h  README.md  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Utils.h  bosses.c  bosses.h  build_mac.sh  clean_mac.sh  draw.c  draw.h  game.c  game.h  game_io.c  game_io.h  helper_functions.c  helper_functions.h  input.c  input.h  main.c  main.cpp  malloc_macros.c  sdl_helpers.c  (+6 more)
Chipmunk2D/src/: libchipmunk.7.0.2.dylib
SDL/: Makefile.rules  libtool
SDL/include/: SDL_config.h
audio/: _audionotes.txt
